--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotel-medium-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "zmecust <247281377@qq.com>",
+  "author": "zmecust <root@laravue.org>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "element-ui": "^1.4.3",
     "jquery": "^3.2.1",
+    "nprogress": "^0.2.0",
+    "screenfull": "^3.3.1",
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
@@ -37,18 +39,20 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "node-sass": "^4.5.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
