--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "element-ui": "^1.4.3",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.1.4",
+    "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
     "screenfull": "^3.3.1",
     "vue": "^2.4.2",
