--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^1.4.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "normalize.css": "^7.0.0",
